src/main/java/com/example/antlr/postgresql/PostgreSqlParser.java
// Generated from /Users/jiangdadong/CodeBuddy/antlr-demo01/src/main/antlr4/postgresql/PostgreSqlParser.g4 by ANTLR 4.13.1
package com.example.antlr.postgresql;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PostgreSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, FROM=2, WHERE=3, AND=4, OR=5, NOT=6, INSERT=7, INTO=8, VALUES=9, 
		UPDATE=10, SET=11, DELETE=12, CREATE=13, TABLE=14, DROP=15, ALTER=16, 
		ADD=17, COLUMN=18, INDEX=19, PRIMARY=20, KEY=21, FOREIGN=22, REFERENCES=23, 
		UNIQUE=24, NULL_=25, DEFAULT=26, IF_=27, EXISTS=28, DATABASE=29, SCHEMA=30, 
		ORDER=31, BY=32, GROUP=33, HAVING=34, LIMIT=35, OFFSET=36, JOIN=37, INNER=38, 
		LEFT=39, RIGHT=40, OUTER=41, CROSS=42, FULL=43, ON=44, AS=45, IN=46, BETWEEN=47, 
		LIKE=48, ILIKE=49, IS=50, DISTINCT=51, UNION=52, INTERSECT=53, EXCEPT=54, 
		ALL=55, CASE=56, WHEN=57, THEN=58, ELSE=59, END=60, ASC=61, DESC=62, RETURNING=63, 
		WITH=64, RECURSIVE=65, CASCADE=66, RESTRICT=67, CONSTRAINT=68, CHECK=69, 
		NULLS=70, FIRST=71, LAST=72, COUNT=73, SUM=74, AVG=75, MIN=76, MAX=77, 
		CAST=78, COALESCE=79, TRUE=80, FALSE=81, SERIAL=82, BIGSERIAL=83, SMALLSERIAL=84, 
		RETURNING_KW=85, CONCURRENTLY=86, USING=87, TABLESPACE=88, INHERITS=89, 
		PARTITION=90, RANGE=91, LIST=92, HASH=93, TEMP=94, TEMPORARY=95, UNLOGGED=96, 
		ONLY=97, SMALLINT=98, INT=99, INTEGER=100, BIGINT=101, REAL=102, FLOAT=103, 
		DOUBLE=104, PRECISION=105, DECIMAL=106, NUMERIC=107, CHAR=108, VARCHAR=109, 
		TEXT=110, BOOLEAN=111, BOOL=112, DATE=113, TIMESTAMP=114, TIME=115, INTERVAL=116, 
		JSON=117, JSONB=118, UUID=119, ARRAY=120, BYTEA=121, INET=122, CIDR=123, 
		MACADDR=124, MONEY=125, XML=126, STAR=127, COMMA=128, DOT=129, LPAREN=130, 
		RPAREN=131, LBRACKET=132, RBRACKET=133, SEMICOLON=134, EQ=135, NEQ=136, 
		LT=137, GT=138, LTE=139, GTE=140, PLUS=141, MINUS=142, DIVIDE=143, MOD=144, 
		CONCAT=145, CAST_OP=146, ARROW=147, DOUBLE_ARROW=148, INTEGER_LITERAL=149, 
		DECIMAL_LITERAL=150, STRING_LITERAL=151, DOLLAR_STRING=152, DOUBLE_QUOTED_ID=153, 
		IDENTIFIER=154, WS=155, LINE_COMMENT=156, BLOCK_COMMENT=157, COMMENT=158;
	public static final int
		RULE_root = 0, RULE_sqlStatements = 1, RULE_sqlStatement = 2, RULE_ddlStatement = 3, 
		RULE_createDatabase = 4, RULE_createSchema = 5, RULE_dropDatabase = 6, 
		RULE_createTable = 7, RULE_tableElement = 8, RULE_dropTable = 9, RULE_alterTable = 10, 
		RULE_alterTableAction = 11, RULE_createIndex = 12, RULE_dropIndex = 13, 
		RULE_dmlStatement = 14, RULE_withClause = 15, RULE_cteDefinition = 16, 
		RULE_selectStatement = 17, RULE_insertStatement = 18, RULE_updateStatement = 19, 
		RULE_deleteStatement = 20, RULE_selectElements = 21, RULE_selectElement = 22, 
		RULE_tableSource = 23, RULE_joinClause = 24, RULE_joinType = 25, RULE_whereClause = 26, 
		RULE_groupByClause = 27, RULE_havingClause = 28, RULE_orderByClause = 29, 
		RULE_orderByElement = 30, RULE_limitClause = 31, RULE_offsetClause = 32, 
		RULE_expression = 33, RULE_comparisonOperator = 34, RULE_caseExpression = 35, 
		RULE_functionCall = 36, RULE_functionName = 37, RULE_columnDefinition = 38, 
		RULE_dataType = 39, RULE_columnConstraint = 40, RULE_tableConstraint = 41, 
		RULE_partitionStrategy = 42, RULE_indexMethod = 43, RULE_updateAssignment = 44, 
		RULE_columnNameList = 45, RULE_indexColumnList = 46, RULE_indexColumn = 47, 
		RULE_expressionList = 48, RULE_columnRef = 49, RULE_tableName = 50, RULE_databaseName = 51, 
		RULE_schemaName = 52, RULE_columnName = 53, RULE_indexName = 54, RULE_constraintName = 55, 
		RULE_cteName = 56, RULE_alias = 57, RULE_identifier = 58, RULE_nonReservedKeyword = 59, 
		RULE_literal = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "sqlStatements", "sqlStatement", "ddlStatement", "createDatabase", 
			"createSchema", "dropDatabase", "createTable", "tableElement", "dropTable", 
			"alterTable", "alterTableAction", "createIndex", "dropIndex", "dmlStatement", 
			"withClause", "cteDefinition", "selectStatement", "insertStatement", 
			"updateStatement", "deleteStatement", "selectElements", "selectElement", 
			"tableSource", "joinClause", "joinType", "whereClause", "groupByClause", 
			"havingClause", "orderByClause", "orderByElement", "limitClause", "offsetClause", 
			"expression", "comparisonOperator", "caseExpression", "functionCall", 
			"functionName", "columnDefinition", "dataType", "columnConstraint", "tableConstraint", 
			"partitionStrategy", "indexMethod", "updateAssignment", "columnNameList", 
			"indexColumnList", "indexColumn", "expressionList", "columnRef", "tableName", 
			"databaseName", "schemaName", "columnName", "indexName", "constraintName", 
			"cteName", "alias", "identifier", "nonReservedKeyword", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'*'", "','", "'.'", "'('", 
			"')'", "'['", "']'", "';'", "'='", null, "'<'", "'>'", "'<='", "'>='", 
			"'+'", "'-'", "'/'", "'%'", "'||'", "'::'", "'->'", "'->>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SELECT", "FROM", "WHERE", "AND", "OR", "NOT", "INSERT", "INTO", 
			"VALUES", "UPDATE", "SET", "DELETE", "CREATE", "TABLE", "DROP", "ALTER", 
			"ADD", "COLUMN", "INDEX", "PRIMARY", "KEY", "FOREIGN", "REFERENCES", 
			"UNIQUE", "NULL_", "DEFAULT", "IF_", "EXISTS", "DATABASE", "SCHEMA", 
			"ORDER", "BY", "GROUP", "HAVING", "LIMIT", "OFFSET", "JOIN", "INNER", 
			"LEFT", "RIGHT", "OUTER", "CROSS", "FULL", "ON", "AS", "IN", "BETWEEN", 
			"LIKE", "ILIKE", "IS", "DISTINCT", "UNION", "INTERSECT", "EXCEPT", "ALL", 
			"CASE", "WHEN", "THEN", "ELSE", "END", "ASC", "DESC", "RETURNING", "WITH", 
			"RECURSIVE", "CASCADE", "RESTRICT", "CONSTRAINT", "CHECK", "NULLS", "FIRST", 
			"LAST", "COUNT", "SUM", "AVG", "MIN", "MAX", "CAST", "COALESCE", "TRUE", 
			"FALSE", "SERIAL", "BIGSERIAL", "SMALLSERIAL", "RETURNING_KW", "CONCURRENTLY", 
			"USING", "TABLESPACE", "INHERITS", "PARTITION", "RANGE", "LIST", "HASH", 
			"TEMP", "TEMPORARY", "UNLOGGED", "ONLY", "SMALLINT", "INT", "INTEGER", 
			"BIGINT", "REAL", "FLOAT", "DOUBLE", "PRECISION", "DECIMAL", "NUMERIC", 
			"CHAR", "VARCHAR", "TEXT", "BOOLEAN", "BOOL", "DATE", "TIMESTAMP", "TIME", 
			"INTERVAL", "JSON", "JSONB", "UUID", "ARRAY", "BYTEA", "INET", "CIDR", 
			"MACADDR", "MONEY", "XML", "STAR", "COMMA", "DOT", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "SEMICOLON", "EQ", "NEQ", "LT", "GT", "LTE", 
			"GTE", "PLUS", "MINUS", "DIVIDE", "MOD", "CONCAT", "CAST_OP", "ARROW", 
			"DOUBLE_ARROW", "INTEGER_LITERAL", "DECIMAL_LITERAL", "STRING_LITERAL", 
			"DOLLAR_STRING", "DOUBLE_QUOTED_ID", "IDENTIFIER", "WS", "LINE_COMMENT", 
			"BLOCK_COMMENT", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PostgreSqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PostgreSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public SqlStatementsContext sqlStatements() {
			return getRuleContext(SqlStatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PostgreSqlParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostgreSqlParserVisitor ) return ((PostgreSqlParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			sqlStatements();
			setState(123);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementsContext extends ParserRuleContext {
		public List<SqlStatementContext> sqlStatement() {
			return getRuleContexts(SqlStatementContext.class);
		}
		public SqlStatementContext sqlStatement(int i) {
			return getRuleContext(SqlStatementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(PostgreSqlParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PostgreSqlParser.SEMICOLON, i);
		}
		public SqlStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).enterSqlStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).exitSqlStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostgreSqlParserVisitor ) return ((PostgreSqlParserVisitor<? extends T>)visitor).visitSqlStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementsContext sqlStatements() throws RecognitionException {
		SqlStatementsContext _localctx = new SqlStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & -9223372036854719935L) != 0)) {
				{
				{
				setState(125);
				sqlStatement();
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(126);
					match(SEMICOLON);
					}
				}

				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementContext extends ParserRuleContext {
		public DdlStatementContext ddlStatement() {
			return getRuleContext(DdlStatementContext.class,0);
		}
		public DmlStatementContext dmlStatement() {
			return getRuleContext(DmlStatementContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).enterSqlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).exitSqlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostgreSqlParserVisitor ) return ((PostgreSqlParserVisitor<? extends T>)visitor).visitSqlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sqlStatement);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
			case DROP:
			case ALTER:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				ddlStatement();
				}
				break;
			case SELECT:
			case INSERT:
			case UPDATE:
			case DELETE:
			case WITH:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				dmlStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DdlStatementContext extends ParserRuleContext {
		public CreateDatabaseContext createDatabase() {
			return getRuleContext(CreateDatabaseContext.class,0);
		}
		public CreateSchemaContext createSchema() {
			return getRuleContext(CreateSchemaContext.class,0);
		}
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public DropDatabaseContext dropDatabase() {
			return getRuleContext(DropDatabaseContext.class,0);
		}
		public DropTableContext dropTable() {
			return getRuleContext(DropTableContext.class,0);
		}
		public AlterTableContext alterTable() {
			return getRuleContext(AlterTableContext.class,0);
		}
		public CreateIndexContext createIndex() {
			return getRuleContext(CreateIndexContext.class,0);
		}
		public DropIndexContext dropIndex() {
			return getRuleContext(DropIndexContext.class,0);
		}
		public DdlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).enterDdlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).exitDdlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostgreSqlParserVisitor ) return ((PostgreSqlParserVisitor<? extends T>)visitor).visitDdlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DdlStatementContext ddlStatement() throws RecognitionException {
		DdlStatementContext _localctx = new DdlStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ddlStatement);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				createDatabase();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				createSchema();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				createTable();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(141);
				dropDatabase();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(142);
				dropTable();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(143);
				alterTable();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(144);
				createIndex();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(145);
				dropIndex();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateDatabaseContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(PostgreSqlParser.CREATE, 0); }
		public TerminalNode DATABASE() { return getToken(PostgreSqlParser.DATABASE, 0); }
		public DatabaseNameContext databaseName() {
			return getRuleContext(DatabaseNameContext.class,0);
		}
		public TerminalNode IF_() { return getToken(PostgreSqlParser.IF_, 0); }
		public TerminalNode NOT() { return getToken(PostgreSqlParser.NOT, 0); }
		public TerminalNode EXISTS() { return getToken(PostgreSqlParser.EXISTS, 0); }
		public CreateDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).enterCreateDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostgreSqlParserListener ) ((PostgreSqlParserListener)listener).exitCreateDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostgreSqlParserVisitor ) return ((PostgreSqlParserVisitor<? extends T>)visitor).visitCreateDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateDatabaseContext createDatabase() throws RecognitionException {
		CreateDatabaseContext _localctx = new CreateDatabaseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createDatabase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(CREATE);
			setState(149);
			match(DATABASE);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF_) {
				{
				setState(150);
				match(IF_);
				setState(151);
				match(NOT);
				setState(152);
				match(EXISTS);
				}
			}

			setState(155);
			databaseName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
